--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+  <meta charset="UTF-8">
+  <meta name="google-site-verification" content="npfBDBl77dx94mJX9nCJEC3tYdXML8IFPkju-6YXQYY" />
+  <title>HUNTER - الرئيسية</title>
+
 <!-- index.html -->
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
@@ -58,3 +63,4 @@
   </footer>
 </body>
 </html>
+</head>
